--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# Saved models
+/log*
+/saved*
+/log_tensorboard*
+*.pth
+
+.vscode/
+.idea/
+*.pyc
+*.log
+log_tensorboard/*
+saved/
+*.lprof
+*.egg-info/
+docs/build/
+wandb/*
+/ray_log*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -21,7 +39,6 @@ sdist/
 var/
 wheels/
 share/python-wheels/
-*.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
@@ -56,7 +73,6 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
